--- a/i_team.html
+++ b/i_team.html
@@ -84,6 +84,7 @@
 
 
 
+
                 Gasanov</a> (9/2018-present)</li>
             <li><a href="https://www.dmitry-kovalev.com/">Dmitry Kovalev</a>
               (9/2018-present)</li>
@@ -91,6 +92,7 @@
               (8/2017-12/2018)</li>
             <li><a
                 href="https://vcc.kaust.edu.sa/Pages/Sailanbayev.aspx">Alibek
+
 
 
 
@@ -140,10 +142,12 @@
 
 
 
+
                 Sokolov</a> (Moscow Institute of Physics and
               Technology), 1/2019-2/2019</li>
             <li><a
                 href="https://eduardgorbunov.github.io/index.html#header3-a">Eduard
+
 
 
 
@@ -181,10 +185,12 @@
 
 
 
+
                 Elsukov</a> (Moscow Institute of Physics and
               Technology), 1/2019-2/2019</li>
             <li><a
                 href="https://www.researchgate.net/profile/Egor_Shulgin">Egor
+
 
 
 
@@ -218,10 +224,12 @@
 
 
 
+
                 Kovalev</a> (Moscow Institute of Physics and
               Technology), 1/2018-2/2018<br>
             </li>
             <li><a href="https://vcc.kaust.edu.sa/Pages/Gasanov.aspx">Elnur
+
 
 
 
@@ -260,10 +268,12 @@
 
 
 
+
                 Gorbunov</a> (Moscow Institute of Physics and
               Technology), 1/2018-2/2018</li>
             <li><a
                 href="https://www.imo-official.org/participant_r.aspx?id=26648">Slavomír
+
 
                 Hanzely</a> (Comenius University), 1/2018-2/2018<br>
             </li>
@@ -286,12 +296,14 @@
 
 
 
+
                 Kroshnin</a> (Moscow &amp; Lyon), 4/2019<br>
             </li>
             <li><a href="http://www.maths.ed.ac.uk/%7Es1461357/">Nicolas
                 Loizou</a> (Edinburgh), 4/2019-5/2019</li>
             <li><a
                 href="https://www.researchgate.net/profile/Dmitry_Kamzolov">Dmitry
+
                 Kamzolov</a> (Moscow Institute of Physics and
               Technology), 1/2019-2/2019</li>
             <li><a href="https://gowerrobert.github.io/">Robert Gower</a>
@@ -315,11 +327,13 @@
 
 
 
+
                 Möllenhoff</a> (Munich), 8/2018<br>
             </li>
             <li><a href="http://www.maths.ed.ac.uk/%7Es1461357/">Nicolas
                 Loizou</a> (Edinburgh), 1/2018-3/2018</li>
             <li><a href="http://www.damtp.cam.ac.uk/user/me404/">Matthias
+
 
 
 
@@ -371,6 +385,7 @@
 
 
 
+
                 Doikov</a> (HSE Moscow), 10/2017-11/2017<br>
             </li>
             <li><a href="http://sstich.ch">Sebastian Stich</a> (EPFL),
@@ -386,6 +401,7 @@
                 Hanzely</a> (Edinburgh), 4/2017-5/2017</li>
             <li><a
 href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCHENKO">Dmitriy
+
 
 
 
@@ -451,6 +467,7 @@ href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCH
 
 
 
+
                 Ribeiro</a> (10/2014<span class="style1" style="width:
                 300px;">–</span>3/2015)</li>
             <li>current position: Associate Professor, Federal
@@ -481,6 +498,7 @@ href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCH
 
 
 
+
               <br>
             </li>
             <li>current position: Assistant Professor, University of
@@ -488,6 +506,7 @@ href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCH
           </ul>
           <ul>
             <li><a href="http://perso.telecom-paristech.fr/%7Eofercoq/">Olivier
+
 
 
 
@@ -539,6 +558,7 @@ href="http://www.canterbury.ac.nz/spark/Researcher.aspx?Researcherid=4085405">Ra
 
 
 
+
                 Tappenden</a> (2/2012<span class="style1" style="width:
                 300px;">–</span>7/2014)</li>
             <li>current position: Assistant Professor, University of
@@ -548,6 +568,7 @@ href="http://www.canterbury.ac.nz/spark/Researcher.aspx?Researcherid=4085405">Ra
           <ul>
             <li><a
 href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marecek">Jakub
+
 
 
 
@@ -607,16 +628,19 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
 
 
 
+
                 Loizou</a> (10/2015<span class="style1" style="width:
-                300px;">–</span>present)</li>
+                300px;">–</span>6/2019)</li>
             <li>thesis: Randomized iterative methods for linear systems:
               momentum, inexactness and gossip<br>
             </li>
-            <li>current position: PhD student @ Edinburgh</li>
+            <li>next position: postdoc at MILA, Montréal<br>
+            </li>
           </ul>
           <ul>
             <li><a
                 href="http://www.inf.ed.ac.uk/people/students/Theo_Pavlakou.html">Theo
+
 
 
 
@@ -679,6 +703,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
 
 
 
+
                 Csiba</a> (9/2014<span class="style1" style="width:
                 300px;">–present</span>)</li>
             <li>thesis: Data sampling strategies in stochastic
@@ -709,14 +734,18 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
           <h2>Visiting PhD Students<br>
           </h2>
           <ul>
-            <li>Luca Bravi (3/2015<span class="style1" style="width:
+            <li><a
+                href="https://scholar.google.com/citations?user=hivmUaoAAAAJ&amp;hl=fr">Luca
+                Bravi</a> (3/2015<span class="style1" style="width:
                 300px;">–</span>6/2015)</li>
             <li>visiting PhD student from University of Florence, Italy
               <br>
             </li>
           </ul>
           <ul>
-            <li><a href="https://www.scs.cmu.edu/directory/minnanl">Minnan
+            <li><a
+href="https://scholar.google.com/citations?user=C3ujEF0AAAAJ&amp;hl=zh-CN">Minnan
+
 
 
 
@@ -742,8 +771,8 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
                 300px;">–</span>2/2013)</li>
             <li>visiting PhD student from Tsinghua University,
               China&nbsp;</li>
-            <li>current position: Visiting Scholar, Carnegie-Mellon
-              Univ. &amp; Assistant Professor, Xi'an Jiaotong University<br>
+            <li>current position: Associate Professor, Xi'an Jiaotong
+              University<br>
             </li>
           </ul>
           <h2>Master Students<br>
@@ -751,6 +780,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
           <ul>
             <li><a
                 href="http://www.inf.ed.ac.uk/people/students/Theo_Pavlakou.html">Theo
+
 
 
 
@@ -796,27 +826,35 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
 
 
 
+
                 Papamakarios</a> (2014) - IRDS project (<a
                 href="papers/Papamakarios.pdf">report</a>)</li>
-            <li>Juraj Labant (2016)</li>
-            <li>Jakob Kisiala (2015), <a
-                href="docs/Kisiala_Dissertation.pdf">dissertation</a>,
-              1st position: risk analyst at <a
-                href="www.barclays.co.uk/">Barclays</a> (Glasgow)</li>
-            <li>Arefin Md. Rajib (2015), next position: faculty at Math.
-              Dept, <a href="http://www.du.ac.bd/">University of Dhaka</a>
-              (Bangladesh)</li>
+            <li><a
+                href="https://uk.linkedin.com/in/juraj-labant-21865a9b">Juraj
+                Labant</a> (2016), Data Scientist at Department of
+              Education, United Kingdom<br>
+            </li>
+            <li><a
+                href="https://uk.linkedin.com/in/jakob-kisiala-5807001b">Jakob
+                Kisiala</a> (2015), <a
+                href="https://arxiv.org/abs/1511.00140">dissertation</a>,
+              current position: Credit Model Risk Quant at Royal Bank of
+              Scotland</li>
+            <li>Arefin Md. Rajib (2015), faculty at Mathematics
+              Department, <a href="http://www.du.ac.bd/">University of
+                Dhaka</a>, Bangladesh</li>
             <li>Yijun Zheng (2015)&nbsp;</li>
             <li>Li Tao (2015)&nbsp;</li>
             <li>Tong Ma (2014)&nbsp;</li>
-            <li>Rui Zhong (2014), 1st position: <a
-                href="http://www.tencent.com/en-us/index.shtml">Tencent</a>
-              (Beijing)&nbsp;</li>
+            <li>Rui Zhong (2014), <a
+                href="http://www.tencent.com/en-us/index.shtml">Tencent</a>,
+              Beijing <br>
+            </li>
             <li>Yu Yu (2013)&nbsp;</li>
             <li>Tingting Tao (2013)&nbsp;</li>
-            <li>Meimei Wang (2013), 1st position: citigold associate at
-              <a
+            <li>Meimei Wang (2013), citigold associate at <a
                 href="http://www.citibank.com.cn/homepage/en/cn_homepage.htm">Citibank
+
 
 
 
@@ -840,8 +878,10 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
 
                 China</a>&nbsp;</li>
             <li>Meensuk Punlavee (2013)&nbsp;</li>
-            <li>Alexander Banks-Watson (2012), 1st position: <a
-                href="http://www.quintiq.com/">Quintiq</a> (Netherlands)</li>
+            <li><a href="https://www.linkedin.com/in/abankswatson">Alexander
+                Banks-Watson</a> (2012), Senior Supply Chain
+              Optimization Consultant, Opex Analytics<br>
+            </li>
             <li><a
                 href="http://scholar.google.com/citations?user=vMMDhTUAAAAJ&amp;hl=en">Christos
 
@@ -865,19 +905,22 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
 
 
 
-                Delivorias</a> (2012), 1st position: quant at <a
+
+                Delivorias</a> (2012), quant at <a
                 href="http://www.swip.com/global/">SWIP</a></li>
             <li>Mihyun Jang (2012)</li>
-            <li>Chao Yu (2011), 1st position: <a
-                href="http://www.rbs.co.uk/">Royal Bank of Scotland</a></li>
-            <li>William Hulme (2011), 1st position: <a
+            <li>Chao Yu (2011), <a href="http://www.rbs.co.uk/">Royal
+                Bank of Scotland</a></li>
+            <li>William Hulme (2011), <a
                 href="http://www.nhsbt.nhs.uk/">NHS Blood &amp;
                 Transplant</a>, as of '14: <a
                 href="http://www.herc.ac.uk/">PhD studies HERC</a></li>
-            <li>James Boffin (2011), 1st position: <a
-                href="http://www.orhltd.com/">ORH Ltd</a></li>
-            <li>Marilena Karanika (2010), 1st position: <a
-                href="http://www.rbs.co.uk/">Royal Bank of Scotland</a></li>
+            <li><a href="https://uk.linkedin.com/in/jamesboffin">James
+                Boffin</a> (2011), Data Scientist, Aviva<br>
+            </li>
+            <li><a href="https://uk.linkedin.com/in/marilena-karanika">Marilena
+                Karanika</a> (2010), Modelling &amp; Analytics Manager
+              at Royal Bank of Scotland</li>
             <li>Robie King (2010)&nbsp;</li>
             <li>Jinwen Lin (2010) <br>
             </li>
@@ -899,8 +942,10 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
             <li><a
 href="https://warwick.ac.uk/fac/sci/mathsys/people/students/2014intake/peneva/">Iliana
 
+
                 Peneva</a> (2012, Edinburgh Mathematics), now: Oxford </li>
             <li><a href="http://www.uclouvain.be/bartosz.filipecki">Bartosz
+
 
 
 
@@ -921,10 +966,12 @@ href="https://warwick.ac.uk/fac/sci/mathsys/people/students/2014intake/peneva/">
                 Filipecki</a> (2011, Edinburgh Mathematics), now: <a
                 href="https://de.linkedin.com/in/bartosz-filipecki-24923a85">postdoc
 
+
                 @ Chemnitz</a><br>
             </li>
             <li>Edward Cumberlege (2011, Edinburgh Mathematics), now: <a
 href="https://www.bloomberg.com/research/stocks/private/person.asp?personId=264554286&amp;privcapId=214118497&amp;previousCapId=214118497&amp;previousTitle=Sagamore%20Investments">Director
+
 
                 @ Sagamore Investments </a><br>
             </li>
@@ -936,6 +983,7 @@ href="https://www.bloomberg.com/research/stocks/private/person.asp?personId=2645
             <li><a
                 href="http://esd.sutd.edu.sg/faculty/selin-damla-ahipasaoglu/">Selin
 D.
+
 
 
 
@@ -981,8 +1029,10 @@ D.
 
 
 
+
                 Baes</a> (University of Zurich)</li>
             <li><a href="http://maiage.jouy.inra.fr/?q=fr/bergou">Elhoucine
+
 
 
 
@@ -1027,6 +1077,7 @@ D.
 
 
 
+
                 Eftekhari</a> (The Alan Turing Institute)</li>
             <li><a href="http://www.damtp.cam.ac.uk/people/me404/">Matthias
 
@@ -1050,8 +1101,10 @@ D.
 
 
 
+
                 Ehrhardt</a> (Cambridge)</li>
             <li><a href="http://www.iam.fmph.uniba.sk/ospm/Harman/">Radoslav
+
 
 
 
@@ -1101,8 +1154,10 @@ D.
 
 
 
+
                 Nesterov</a> (Louvain)</li>
             <li><a href="https://www.researchgate.net/profile/Tie_Ni">Tie
+
 
 
 
@@ -1127,6 +1182,7 @@ D.
                 Ni</a> (Liaoning Technical University)</li>
             <li><a
                 href="http://www-syscom.univ-mlv.fr/%7Epesquet/index.htm">Jean-Christophe
+
 
 
 
@@ -1175,9 +1231,11 @@ D.
 
 
 
+
                 Stich</a> (Louvain)</li>
             <li><a
 href="https://www.liverpool.ac.uk/mathematical-sciences/staff/tuomo-valkonen/">Tuomo
+
 
 
 
