many new post titles

--- a/index.html
+++ b/index.html
@@ -3346,6 +3346,7 @@ href="https://cemse.kaust.edu.sa/events/Pages/AMCS-seminar--Numerical-approximat
           <br>
           <br>
           <h3>February 23, 2019</h3>
+          <h1>Senior PC Member for IJCAI 2019</h1>
           <br>
           I have accepted an invite to serve as a Senior Program
           Committee Member at the 28th International Joint Conference on
@@ -3359,6 +3360,7 @@ href="https://cemse.kaust.edu.sa/events/Pages/AMCS-seminar--Numerical-approximat
           <br>
           <br>
           <h3>February 20, 2019</h3>
+          <h1>I am in Vienna</h1>
           <br>
           I am in Vienna, visiting the <span style="caret-color:
             rgb(51, 51, 51); color: rgb(51, 51, 51); font-family:
@@ -4162,6 +4164,7 @@ href="https://papers.nips.cc/paper/7478-sega-variance-reduction-via-gradient-ske
           <br>
           <br>
           <h3>February 18, 2019</h3>
+          <h1>Konstantin @ EPFL</h1>
           <br>
           As of today, Konstantin Mishchenko is visiting Martin Jaggi's
           <a href="https://mlo.epfl.ch">Machine Learning and
@@ -4175,6 +4178,7 @@ href="https://papers.nips.cc/paper/7478-sega-variance-reduction-via-gradient-ske
           <br>
           <br>
           <h3>February 12, 2019</h3>
+          <h1>New paper</h1>
           <br>
           <span class="important">New paper out: </span><a
             href="https://arxiv.org/abs/1902.03591">"Stochastic three
@@ -4216,6 +4220,7 @@ href="https://papers.nips.cc/paper/7478-sega-variance-reduction-via-gradient-ske
           <br>
           <br>
           <h3>February 11, 2019</h3>
+          <h1>Internships available in my group</h1>
           <br>
           I always have research internships available in my group @ <a
             href="https://www.kaust.edu.sa/en">KAUST</a> throughout the
@@ -4393,6 +4398,7 @@ href="https://vsrp.kaust.edu.sa/Pages/Topics%20in%20Machine%20Learning%20and%20O
           <br>
           <br>
           <h3>February 8, 2019</h3>
+          <h1>Group photo</h1>
           <br>
           This is my research group: <br>
           <br>
@@ -4423,6 +4429,7 @@ href="https://vsrp.kaust.edu.sa/Pages/Topics%20in%20Machine%20Learning%20and%20O
           <br>
           <br>
           <h3>February 4, 2019</h3>
+          <h1>New paper</h1>
           <br>
           <span class="important">New paper out: </span><a
             href="https://arxiv.org/abs/1902.01272">"A stochastic
@@ -4584,6 +4591,7 @@ href="https://vsrp.kaust.edu.sa/Pages/Topics%20in%20Machine%20Learning%20and%20O
           <br>
           <br>
           <h3>January 27, 2019</h3>
+          <h1>New paper</h1>
           <br>
           <span class="important">New paper out: </span><a
             href="https://arxiv.org/abs/1901.09437">"99% of parallel
@@ -4617,6 +4625,7 @@ href="https://vsrp.kaust.edu.sa/Pages/Topics%20in%20Machine%20Learning%20and%20O
           <br>
           <br>
           <h3>January 26, 2019</h3>
+          <h1>New paper</h1>
           <br>
           <span class="important">New paper out: </span><a
             href="https://arxiv.org/abs/1901.09269">"Distributed
@@ -4654,6 +4663,7 @@ href="https://vsrp.kaust.edu.sa/Pages/Topics%20in%20Machine%20Learning%20and%20O
           <br>
           <br>
           <h3>January 26, 2019</h3>
+          <h1>Filip and Aritra @ AAAI 2019 in Hawaii</h1>
           <br>
           <a href="https://fhanzely.github.io/index.html">Filip Hanzely</a>
           and <a href="https://www.aritradutta.com">Aritra Dutta</a>
@@ -4666,6 +4676,7 @@ href="https://vsrp.kaust.edu.sa/Pages/Topics%20in%20Machine%20Learning%20and%20O
           <br>
           <br>
           <h3>January 25, 2019</h3>
+          <h1>New paper</h1>
           <br>
           <span class="important">New paper out: </span><a
             href="https://arxiv.org/abs/1901.09401">"SGD: general
@@ -4830,6 +4841,7 @@ href="https://vsrp.kaust.edu.sa/Pages/Topics%20in%20Machine%20Learning%20and%20O
           <br>
           <br>
           <h3>January 24, 2019</h3>
+          <h1>Two new papers</h1>
           <br>
           <span class="important">New paper out: </span><a
             href="https://arxiv.org/abs/1901.08689">"Don’t jump through
@@ -4892,6 +4904,8 @@ href="https://vsrp.kaust.edu.sa/Pages/Topics%20in%20Machine%20Learning%20and%20O
           <br>
           <br>
           <h3>January 15, 2019</h3>
+          <h1>El Houcine moving on to a new position<br>
+          </h1>
           <br>
           <a href="https://vcc.kaust.edu.sa/Pages/Bergou.aspx">El
             Houcine Bergou's</a> 1 year postdoc contract in my group
@@ -5053,6 +5067,7 @@ href="https://vsrp.kaust.edu.sa/Pages/Topics%20in%20Machine%20Learning%20and%20O
           <br>
           <br>
           <h3>January 14, 2019</h3>
+          <h1>ICML 2019 deadline approaching</h1>
           <br>
           <a href="https://icml.cc/Conferences/2019">ICML</a> deadline
           is upon us (on Jan 23)... Everyone in my group is working hard
@@ -5063,6 +5078,7 @@ href="https://vsrp.kaust.edu.sa/Pages/Topics%20in%20Machine%20Learning%20and%20O
           <br>
           <br>
           <h3>January 10, 2019</h3>
+          <h1>AI Committee Lead</h1>
           <br>
           I've been asked to lead an Aritificial Intelligence Committee
           at KAUST whose role is to prepare a strategic plan for growing
@@ -5085,6 +5101,8 @@ href="https://vsrp.kaust.edu.sa/Pages/Topics%20in%20Machine%20Learning%20and%20O
           <br>
           <br>
           <h3>January 6, 2019</h3>
+          <h1>Back at KAUST: people counting<br>
+          </h1>
           <br>
           I am back at KAUST. <a
             href="http://maiage.jouy.inra.fr/?q=fr/bergou">El Houcine</a>,
@@ -5408,6 +5426,7 @@ href="https://mipt.ru/science/visiting_prof/piter-rikhtarik-peter-richtarik.php"
           <br>
           <br>
           <h3>January 3, 2019</h3>
+          <h1>Visiting Rado Harman</h1>
           <br>
           I am visiting <a
             href="http://www.iam.fmph.uniba.sk/ospm/Harman/">Radoslav
@@ -5418,6 +5437,7 @@ href="https://mipt.ru/science/visiting_prof/piter-rikhtarik-peter-richtarik.php"
           <br>
           <br>
           <h3>December 22, 2018</h3>
+          <h1>Vacation</h1>
           <br>
           I am on vacation until the end of the year.<br>
           <br>
@@ -5426,6 +5446,8 @@ href="https://mipt.ru/science/visiting_prof/piter-rikhtarik-peter-richtarik.php"
           <br>
           <br>
           <h3>December 22, 2018</h3>
+          <h1>Paper accepted to AISTATS 2019<br>
+          </h1>
           <br>
           The paper <a href="https://arxiv.org/abs/1809.09354">"Accelerated
 coordinate
@@ -5542,6 +5564,7 @@ descent
           <br>
           <br>
           <h3>December 22, 2018</h3>
+          <h1>I will deliver summer school lectures @ ICCOPT 2019</h1>
           <br>
           I have accepted an invite to deliver half-a-day worth of
           summer school lectures on optimization in machine learning at
@@ -5584,6 +5607,8 @@ descent
           <br>
           <br>
           <h3>December 14, 2018</h3>
+          <h1>Alibek and Samuel graduated<br>
+          </h1>
           <br>
           <a href="https://vcc.kaust.edu.sa/Pages/Sailanbayev.aspx">Alibek</a>
           and <a href="https://samuelhorvath.github.io">Samuel</a>
@@ -6021,6 +6046,7 @@ China,
           <br>
           <br>
           <h3>December 11, 2018</h3>
+          <h1>Konstantin and Filip back from their internships</h1>
           <br>
           <a href="https://konstmish.github.io">Konstantin</a> and <a
             href="https://fhanzely.github.io/index.html">Filip</a> are
@@ -6032,6 +6058,7 @@ China,
           <br>
           <br>
           <h3>December 10, 2018</h3>
+          <h1>Robert Gower @ KAUST</h1>
           <br>
           The final exam for CS 390FF course is today. <a
             href="https://perso.telecom-paristech.fr/rgower/">Robert
@@ -6043,6 +6070,7 @@ China,
           <br>
           <br>
           <h3>December 8, 2018</h3>
+          <h1>Back @ KAUST</h1>
           <br>
           I am back at KAUST now. <br>
           <br>
@@ -6051,6 +6079,7 @@ China,
           <br>
           <br>
           <h3>December 2, 2018</h3>
+          <h1>Attending NeurIPS 2018</h1>
           <br>
           I have arrived in Montréal to attend the <a
             href="https://nips.cc">NeurIPS</a> (formerly known as NIPS)
@@ -6083,6 +6112,7 @@ China,
           <br>
           <br>
           <h3>November 30, 2018</h3>
+          <h1>New paper</h1>
           <br>
           <span class="important">New paper out: </span><a
             href="https://arxiv.org/abs/1811.12403">"New convergence
@@ -7456,6 +7486,7 @@ href="https://researcher.watson.ibm.com/researcher/view.php?person=ibm-lamnguyen
           <br>
           <br>
           <h3>November 28, 2018</h3>
+          <h1>Nicolas Loizou looking for jobs</h1>
           <br>
           <a href="https://www.maths.ed.ac.uk/%7Es1461357/">Nicolas
             Loizou</a> is on the job market; he will get is PhD in 2019.
@@ -7637,6 +7668,7 @@ Research
           <br>
           <br>
           <h3>November 22, 2018</h3>
+          <h1>NeurIPS 2018 posters</h1>
           <br>
           Here are the posters of our papers accepted to this year's <a
             href="https://nips.cc">NeurIPS</a>: <br>
@@ -7676,6 +7708,7 @@ Research
           <br>
           <br>
           <h3>November 18, 2018</h3>
+          <h1>New postdoc: Xun Qian</h1>
           <br>
           Xun QIAN just joined my <a
             href="https://www.maths.ed.ac.uk/%7Eprichtar/i_team.html">group
@@ -8145,6 +8178,7 @@ href="https://www.tandfonline.com/doi/full/10.1080/02331934.2017.1279160"><i>Opt
           <br>
           <br>
           <h3>November 16, 2018</h3>
+          <h1>Nicolas visiting MILA</h1>
           <br>
           <a href="https://www.maths.ed.ac.uk/%7Es1461357/">Nicolas
             Loizou</a> is giving a talk today at <a
@@ -8159,6 +8193,7 @@ href="https://www.tandfonline.com/doi/full/10.1080/02331934.2017.1279160"><i>Opt
           <br>
           <br>
           <h3>November 13, 2018</h3>
+          <h1>Nicolas visiting McGill</h1>
           <br>
           <a href="https://www.maths.ed.ac.uk/%7Es1461357/">Nicolas
             Loizou</a> is giving a talk today in the Mathematics in
@@ -8173,6 +8208,7 @@ href="https://www.tandfonline.com/doi/full/10.1080/02331934.2017.1279160"><i>Opt
           <br>
           <br>
           <h3>November 12, 2018</h3>
+          <h1>Statistics and Data Science Workshop @ KAUST</h1>
           <br>
           Today I am giving a talk at the <a
 href="https://stat.kaust.edu.sa/calender/Pages/Page-2018-03-14_11-12-20-AM.aspx">Statistics
@@ -8456,15 +8492,14 @@ Data
           <br>
           <br>
           <h3>November 4, 2018</h3>
-          <br>
-          <span class="important">A paper accepted to IEEE Winter
-            Conference on Applications of Computer Vision (WACV 2019) </span><br>
+          <h1>Paper accepted to WACV 2019</h1>
           <br>
           The paper <a href="https://arxiv.org/abs/1712.02249">"Online
             and batch incremental video background estimation"</a>,
           joint work with <a href="https://www.aritradutta.com">Aritra
-            Dutta</a>, has just been accepted to the <a
-            href="http://wacv19.wacv.net">WACV 2019</a>. The conference
+            Dutta</a>, has just been accepted to IEEE Winter Conference
+          on Applications of Computer Vision (<a
+            href="http://wacv19.wacv.net">WACV 2019</a>). The conference
           will take place during January 7-January 11, 2019 in Honolulu,
           Hawaii. <br>
           <br>
@@ -8473,6 +8508,7 @@ Data
           <br>
           <br>
           <h3>November 4, 2018</h3>
+          <h1>Back @ KAUST</h1>
           <br>
           I am back from annual leave. <br>
           <br>
@@ -8481,16 +8517,14 @@ Data
           <br>
           <br>
           <h3>November 3, 2018</h3>
-          <br>
-          <span class="important">A paper accepted to NIPS Workshop on
-            Privacy-Preserving Machine Learning (PPML18)</span><br>
+          <h1>Paper accepted to PPML 2018</h1>
           <br>
           The paper "A Privacy Preserving Randomized Gossip Algorithm
           via Controlled Noise Insertion", joint work with Nicolas
           Loizou, Filip Hanzely, Jakub Konečný and Dmitry Grishchenko,
           has been accepted to the NIPS Workshop on Privacy-Preserving
-          Machine Learning. The full-length paper, which includes a
-          number of additional algorithms and results, <a
+          Machine Learning (PPML 2018). The full-length paper, which
+          includes a number of additional algorithms and results, <a
             href="https://arxiv.org/abs/1706.07636">can be found on
             arXiv here</a>.<br>
           <br>
@@ -8506,6 +8540,7 @@ Data
           <br>
           <br>
           <h3>November 1, 2018</h3>
+          <h1>New paper</h1>
           <br>
           <span class="important">New paper out: </span><a
             href="https://arxiv.org/abs/1810.13387">"A stochastic
@@ -8639,6 +8674,7 @@ Data
           <br>
           <br>
           <h3>November 1, 2018</h3>
+          <h1>Aritra and El Houcine @ 2018 INFORMS Annual Meeting</h1>
           <br>
           <a href="https://www.aritradutta.com">Aritra Dutta</a> and <a
             href="https://vcc.kaust.edu.sa/Pages/Bergou.aspx">El Houcine
@@ -8836,6 +8872,7 @@ Annual
           <br>
           <br>
           <h3>October 31, 2018</h3>
+          <h1>New paper</h1>
           <br>
           <span class="important">New paper out: </span><a
             href="https://arxiv.org/abs/1810.13084">"Provably
@@ -8861,14 +8898,13 @@ Annual
           <br>
           <br>
           <h3>October 31, 2018</h3>
-          <br>
-          <span class="important">A paper accepted to The Thirty-Third
-            AAAI Conference on Artificial Intelligence (AAAI-19)</span><br>
+          <h1>Paper accepted to AAAI 2019</h1>
           <br>
           The paper <a href="https://arxiv.org/abs/1805.07962">"A
             nonconvex projection method for robust PCA"</a>, joint work
-          with Aritra Dutta and Filip Hanzely, has been accepted to <a
-            href="https://aaai.org/Conferences/AAAI-19/">AAAI-19</a>.
+          with Aritra Dutta and Filip Hanzely, has been accepted to the
+          Thirty-Third AAAI Conference on Artificial Intelligence (<a
+            href="https://aaai.org/Conferences/AAAI-19/">AAAI-19)</a>.
           The conference will take place during January 27-February 1,
           2019, in Honolulu, Hawaii, USA.<br>
           <br>
@@ -8899,21 +8935,17 @@ Annual
           <br>
           <br>
           <h3>October 30, 2018</h3>
+          <h1>Paper accepted to JASA</h1>
           <br>
-          <span class="important"><span class="important">A paper
-              accepted to Journal of the American Statistical
-              Association (JASA)<br>
-              <br>
-            </span></span>The paper <a
-            href="https://arxiv.org/abs/1801.05661">"A randomized
-            exchange algorithm for computing optimal approximate designs
-            of experiments"</a>, joint work with <a
+          The paper <a href="https://arxiv.org/abs/1801.05661">"A
+            randomized exchange algorithm for computing optimal
+            approximate designs of experiments"</a>, joint work with <a
             href="http://www.iam.fmph.uniba.sk/ospm/Harman/">Radoslav
             Harman</a> and <a
             href="http://www.iam.fmph.uniba.sk/ospm/Filova/">Lenka
             Filová</a>, has been accepted to
           <meta charset="utf-8">
-          Journal of the American Statistical Association.<br>
+          Journal of the American Statistical Association (JASA).<br>
           <br>
           Abstract: <i>We propose a class of subspace ascent methods
             for computing optimal approximate designs that covers both
@@ -8938,6 +8970,7 @@ Annual
           <br>
           <br>
           <h3>October 25, 2018</h3>
+          <h1>Annual leave</h1>
           <br>
           I am about to go on an annual leave to an island in the Indian
           ocean. I will likely have no functioning internet, and will
@@ -8952,6 +8985,7 @@ Annual
           <br>
           <br>
           <h3>October 22, 2018</h3>
+          <h1>Sebastian Stich @ KAUST</h1>
           <br>
           <a href="https://sstich.ch">Sebastian Stich</a> is visiting me
           at KAUST. He will stay here for three weeks, and will give a
@@ -8962,6 +8996,7 @@ Annual
           <br>
           <br>
           <h3>October 20, 2018</h3>
+          <h1>Filip @ MSR</h1>
           <br>
           <a href="https://vcc.kaust.edu.sa/Pages/Hanzely.aspx">Filip
             Hanzely</a> is visiting <a
