--- a/index.html
+++ b/index.html
@@ -35,14 +35,17 @@
           The <a
             href="https://www.nature.com/articles/d41586-019-01919-8">2019
             Nature index rankings</a> were published. Here is what
-          Nature says about the rankings, "Our measure, fractional count
-          (FC), is based on the share of articles published in 82
-          prestigious scientific journals, selected by an independent
-          panel of scientists and tracked by the Nature Index database."<br>
+          Nature says about its new "fractional count" rankings, "Our
+          measure, fractional count (FC), is based on the share of
+          articles published in 82 prestigious scientific journals,
+          selected by an independent panel of scientists and tracked by
+          the Nature Index database." The <a
+            href="https://www.nature.com/articles/d41586-019-01919-8">full
+            story</a> can be found here.<br>
           <br>
           In the western Asia region, among academic institutions, and
-          in the "nature &amp; science" area, KAUST was ranked #4
-          (fractional count). Here is a <a
+          in the "nature &amp; science" area, KAUST was ranked #4. Here
+          is a <a
 href="https://www.natureindex.com/institution-outputs/generate/Nature%20&amp;%20Science/regions-Western%20Asia/academic/score">list
             of the top 20 institutions</a>:<br>
           <br>
