--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
           measure, fractional count (FC), is based on the share of
           articles published in 82 prestigious scientific journals,
           selected by an independent panel of scientists and tracked by
-          the Nature Index database." The <a
-            href="https://www.nature.com/articles/d41586-019-01919-8">full
-            story</a> can be found here.<br>
+          the Nature Index database." <a
+            href="https://www.nature.com/articles/d41586-019-01919-8">The
+            full story can be found here.</a><br>
           <br>
           In the western Asia region, among academic institutions, and
           in the "nature &amp; science" area, KAUST was ranked #4. Here
